# ChangeLog for app-accessibility/orca
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/orca/ChangeLog,v 1.36 2008/03/09 15:19:54 leio Exp $

  09 Mar 2008; Mart Raudsepp <leio@gentoo.org> -orca-2.18.1.ebuild,
  -orca-2.20.1.ebuild, -orca-2.20.2.ebuild:
  Remove GNOME 2.18 version and other redundant versions

  18 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org> orca-2.20.3.ebuild:
  fix python eclass use, bug #207667

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> orca-2.20.3.ebuild:
  Stable for HPPA (bug #208366).

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> ChangeLog:
  Stable for HPPA (bug #208366).

  03 Feb 2008; Raúl Porcel <armin76@gentoo.org> orca-2.20.3.ebuild:
  alpha/ia64/sparc stable wrt #208366

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> orca-2.20.3.ebuild:
  Stable on amd64 wrt bug #208366.

  01 Feb 2008; Brent Baude <ranger@gentoo.org> orca-2.20.3.ebuild:
  Marking orca-2.20.3 ppc64 and ppc stable for bug 208366

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org> orca-2.20.3.ebuild:
  stable x86, bug 208366

*orca-2.20.3 (09 Jan 2008)

  09 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org> -orca-1.0.0.ebuild,
  -orca-2.18.0.ebuild, -orca-2.20.0.1.ebuild, +orca-2.20.3.ebuild:
  bump to 2.20.3 and clean old revisions

  14 Dec 2007; Raúl Porcel <armin76@gentoo.org> orca-2.20.1.ebuild:
  alpha/ia64/sparc stable

*orca-2.20.2 (06 Dec 2007)

  06 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org> +orca-2.20.2.ebuild:
  bump to 2.20.2

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> orca-2.20.1.ebuild:
  Stable for HPPA (bug #199740).

  26 Nov 2007; Markus Rothe <corsair@gentoo.org> orca-2.20.1.ebuild:
  Stable on ppc64; bug #199740

  24 Nov 2007; Brent Baude <ranger@gentoo.org> orca-2.20.1.ebuild:
  Marking orca-2.20.1 ppc stable for bug 199740

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> orca-2.20.0.1.ebuild:
  alpha/ia64/sparc stable wrt #199740
