@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST orca-2.20.3.tar.bz2 1437345 RMD160 da576cec44728910e5c5aff8d773d90fe4bd4491 SHA1 19f96ce3d6be93236fdc38cea019c31b734f0464 SHA256 17dd0c42552a1d12005faa7b1366b15a60c8d33563a370d8668c43317bd6667c
+DIST orca-2.22.0.tar.bz2 1730351 RMD160 0bb7a95307afaf119852e0603916c9c2fca98f43 SHA1 01aa2f812cca93137887ed425877c0b8f83763f4 SHA256 72083afe8db20abd390e6ddbd34ec41e126ed7fd97c97963b1d4b1980fa70d37
 EBUILD orca-2.20.3.ebuild 1196 RMD160 80650fdd6921d11a26a817c4c5a140de594a3c1f SHA1 c44ecf0cfaa098dfb7e9bea220102cf4bec434d6 SHA256 f18033f2a14d9ce576102883c5cb3f31371e08c8a1099bd7cfc7d8e8286ce81c
-MISC ChangeLog 4305 RMD160 bd65b275759fd98c9e3388469d926cf3b43fd7e7 SHA1 265243517744735a0b6c9287ded8c93f57b41fec SHA256 061ed42c29365f94aedad426c2f084ef3e089c8e22f70e246de35ad140ffd368
+EBUILD orca-2.22.0.ebuild 1406 RMD160 521c4872dc435fb306fa6994b152bf72be35ff80 SHA1 142810b63964925e89d7f0f25a43507856b17f76 SHA256 505fc8d02f3747a375663db57f56ccaec9cad22131fde3d5a3885d1d60e56826
+MISC ChangeLog 4458 RMD160 94a9f33ad6f9b711b50c65094218cbcab9d511b0 SHA1 97d0b182a8369572378bafac3334b322ad7e811d SHA256 716b733d1e052fd0e2a6486d5163b553c370dd2f2eec90596aa8cf3b742772ba
 MISC metadata.xml 519 RMD160 b90bfe171bce0dd394c6fff3936c0afa7e21035e SHA1 cd7f0441e99ce236f385297d22eb962e84dd3049 SHA256 48c45478a56ea2509e36841e48ca51080f04615ae35561701152e412c24b62ef
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.8 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iEYEARECAAYFAkfUAAgACgkQkeYb6olFHJc2HgCgwtcTod07I64AuBa6vNzorfY9
-L6cAni60f4L1IP5bk2nbOlEis77OiRMg
-=hxXb
+iD8DBQFH6s0I1fmVwcYIWAYRAmV6AKDRUKTkCwhX4HsG8wHr9zMaptD1nACeM3lI
+zysLQFdKs/loq1qObicigf8=
+=HXaI
 -----END PGP SIGNATURE-----
